panic instead of returning err
