# api/product/service/v1/product.swagger.json
@@ -86,6 +86,14 @@
         "unitPrice": {
           "type": "number",
           "format": "double"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
